5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1752_1527.log
== TEST (2019-05-16 17:08:09) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki"))
anos=0
while(a<b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:09:06) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki: "))
anos=0
while(a<b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:09:51) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki: "))
anos=0
while(a<b):
	a=a+(c/100)
	b=b+(d/100)
	anos=anos+1
print(anos)	
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:11:57) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki: "))
anos=0
while(a>b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:12:41) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki: "))
anos=0
while(a>b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:13:11) 
-- CODE:
a=int(input("quntidade inicial Forseti: "))
b=int(input("quantidade inicial Loki: "))
c=float(input("% Forseti: "))
d=float(input("% Loki: "))
anos=0
while(a>b):
	a=a+a*(c/100)
	b=b+b*(d/100)
	anos=anos+1
print(anos)	
-- EXECUTION TIME:
0.17224
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
46
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
